# trino-shiny-demo

./: .gitignore  BRANCH_QUERYING_GUIDE.md  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  hive-site.xml  pipeline_config.yaml  rebuild-demo.sh
config/: pipeline_config_delta.yaml  pipeline_config_snowflake.yaml
dmap-data-sdk/: LICENSE  README.md  VALIDATION.md  pyproject.toml
dmap-data-sdk/examples/: ip_sum_example.py
dmap-data-sdk/src/dmap_data_sdk/: __init__.py  data_utils.py
dmap-data-sdk/tests/: README.md  __init__.py  conftest.py  test_data_pipeline.py  test_iceberg_platform.py  test_ref.py  test_run_context.py
opa/policies/: trino.rego
scripts/: dev-restart.sh  init-demo-data.sh  test-all.sh  test-branching.sh  test-metadata.sh  test-shared-queries.py  test-time-travel.sh
shiny-app/: Dockerfile  Dockerfile.deploy  README.md  app.py  requirements.txt
shiny-app/shared/: __init__.py  demo_queries.py
src/data-registration/: register-data-to-iceberg.sh  register_data_to_iceberg.py
src/demos/: iceberg-transformation-demo.py
src/dmap_data_sdk/: data_utils.py
src/pipelines/ip_sum/: README.md  init-ip-sum-data.sh  init_ip_sum_data.py  ip_sum_iceberg_refactor.py  run-enhanced-ip-sum-pipeline.sh  run-ip-sum-pipeline.sh
tests/sdk-integration/: README.md  init-test-data.sh  test-sdk.sh  validate-sdk.sh
trino/etc/: config.properties  jvm.config  log.properties  password.db
trino/etc/tls/trino-security/: clustercoord.pem  example.com.crt  example.com.key  localhost.cnf  localkeys.jks  trino.jks  trino.p12
warehouse/: .gitkeep
